<resources>
    <string name="app_name">Vernam Cipher</string>
    <string name="action_info">Info</string>
    <string name="action_help">Help</string>
    <string name="snack_new_message">Tap on a secret key to write a message using that key</string>
    <string name="snack_no_clip_text">The clipboard does not appear to contain encrypted text</string>
    <string name="page_title_secret_keys">Secret keys</string>
    <string name="page_title_messages">Messages</string>
    <string name="secret_keys_selected">%1$d selected</string>
    <string name="messages_selected">%1$d selected</string>
    <string name="error_exception_build_share_list">Unable to share secret key; please try again.</string>
    <string name="title_activity_add_secret_key">New Secret Key</string>
    <string name="action_done">Done</string>
    <string name="key_length_title">Key length</string>
    <string name="key_length_content_1">The key is combined with your messages to create a cipher text that can be sent via email. A message can only be as long as your key, and part of the key is consumed with each message.</string>
    <string name="key_length_content_2">Key length: %1$d average length email(s) (%2$s %3$s).</string>
    <string name="key_length_bytes">byte(s)</string>
    <string name="key_length_kilobytes">kb</string>
    <string name="key_data_source">Key data source</string>
    <string name="key_data_source_android">Android pseudo-random number generator</string>
    <string name="key_data_source_random_org">Random.org atmospheric noise</string>
    <string name="password_title">Password</string>
    <string name="password_content_1">You may protect the key with a password; if you do not use a password, anyone with physical access to your device may be able to retrieve, modify, and send messages using your secret keys.</string>
    <string name="password_content_2">This password must be entered every time you want to use the key to encrypt or decrypt a message.</string>
    <string name="password_mechanism_diceware">Diceware password generator (most secure)</string>
    <string name="password_mechanism_enter_password">Enter a password (variable security)</string>
    <string name="password_mechanism_no_password">No password (least secure)</string>
    <string name="diceware_password_not_installed_content">To generate a Diceware password, first install the Diceware Password Generator app from the Google Play store by tapping the button below.</string>
    <string name="diceware_password_content">Tap the generate password button to launch the Diceware Password Generator.</string>
    <string name="diceware_password_button_not_installed">Install Diceware Password Generator</string>
    <string name="diceware_password_button">Generate password</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="toast_please_enter_password">Please enter a password</string>
    <string name="toast_passwords_do_not_match">Passwords do not match</string>
    <string name="random_org_url">https://www.random.org/integers/?num=%1$d&amp;min=0&amp;max=255&amp;col=1&amp;base=16&amp;format=plain&amp;rnd=new</string>
    <string name="random_org_quota_url">https://www.random.org/quota/?format=plain</string>
    <string name="progress_dialog_checking_quota">Checking random.org quota</string>
    <string name="progress_generating_secret_key">Generating secret key</string>
    <string name="toast_secret_key_generation_failed">Secret key generation failed</string>
    <string name="toast_get_quota_failed">Unable to get quota from random.org</string>
    <string name="toast_quota_used">You have used your quota from random.org</string>
    <string name="url_random_org_quota">https://www.random.org/quota/</string>
    <string name="random_org_quota_details">Details</string>
    <string name="random_org_error">An error occurred fetching data from random.org: %1$s</string>
    <string name="error_enter_password">Please enter a password</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="description_and_colour_title"><![CDATA[Description & colour (optional)]]></string>
    <string name="description_and_title_content">Giving the key a description and/or colour may make it easier for you to remember which keys are for what purposes. However, if an attacker gains access to your device, it may give them information.</string>
    <string name="description_hint">Description</string>
    <string name="colour_black">Black</string>
    <string name="colour_red">Red</string>
    <string name="colour_green">Green</string>
    <string name="colour_blue">Blue</string>
    <string name="colour_cyan">Cyan</string>
    <string name="colour_orange">Orange</string>
    <string name="colour_purple">Purple</string>
    <string name="colour_grey">Grey</string>
    <string name="info_vernam_cipher_title">What is the Vernam Cipher?</string>
    <string name="info_vernam_cipher_content_1">The Vernam Cipher is a mechanism for encrypting and decrypting data that combines the plain text with a randomly-generated secret key byte by byte to yield a cipher text. To decrypt, the cipher text is combined with the same secret key byte by byte to arrive at the plain text. More information is available at Wikipedia and the Crypto Museum:</string>
    <string name="info_vernam_cipher_content_2">https://en.wikipedia.org/wiki/Gilbert_Vernam#The_Vernam_cipher</string>
    <string name="info_vernam_cipher_content_3">http://www.cryptomuseum.com/crypto/vernam.htm</string>
    <string name="info_open_source_title">Open source?</string>
    <string name="info_open_source_content_1">This application is open source. That means that anybody can go look at the source code, and if they want to, use the source code in their own projects. This also means that one can look at the code and see exactly what the application is doing and verify that it is doing what it says it does (and not doing anything it shouldn\'t, like sending your unencrypted data to the NSA). I don\'t trust any security/privacy related application that isn\'t open source, and you shouldn\'t either.</string>
    <string name="info_open_source_content_2">Please note that the source code has not been audited by an independent third party. If you or your organisation are interested in performing an audit, please contact me, my email address may be found at the bottom of this page.</string>
    <string name="info_who_title">Who wrote this app?</string>
    <string name="info_who_content_1">My name is Jeff Isaak. My background is software development. I am passionate about online security and privacy, personal finance, and garlic. I want to help people reclaim their privacy through clever software. My email address is jisaak@aptasystems.com.</string>
    <string name="info_who_content_2">If you use this app and like it, please consider donating: https://www.jeffisaak.ca/donate</string>
    <string name="info_what_title">What does this app do?</string>
    <string name="info_what_content">This app allows you to create and share secret keys, then encrypt and decrypt messages using the Vernam Cipher and deliver them using the sharing capabilities of your device.</string>
    <string name="info_key_consumption_title">A word about key consumption</string>
    <string name="info_key_consumption_content_1">This implementation of the Vernam cipher consumes part of the key when it is used. This means that once you encrypt or decrypt something with a key, the part of the key that is used is discarded. If this is not done and multiple encrypted messages are captured by an adversary, it may be possible for them to (partially) decrypt the messages. If, however, key data is only used once and discarded after use, decrypting messages without the secret key is impossible.</string>
    <string name="info_key_consumption_content_2">This means that you must take special care to ensure that the key(s) that you share with your communication partner(s) are used in sync. It is recommended, then, that you have two secret keys for each communications partner. One key should be used by you to encrypt messages for your recipient, and another key should be used by them to encrypt messages for you (and by you to decrypt messages from them).</string>
    <string name="info_key_consumption_content_3">This also means that a received message may not be decrypted twice, as the first decryption discards the key data needed to decrypt a second time.</string>
    <string name="help_main_introduction_title">Introduction</string>
    <string name="help_main_introduction_content_1">This app allows you to create and share secret keys, then encrypt and decrypt messages using the Vernam Cipher and deliver them using the sharing capabilities of your device.</string>
    <string name="help_main_introduction_content_2">Wherever you see a question mark button in the title bar you may tap on it to get help for the screen you are in.</string>
    <string name="help_main_secret_keys_title">Secret keys</string>
    <string name="help_main_secret_keys_content">Secret keys are used to encrypt and decrypt messages. The same key must be used to encrypt and decrypt the message, so before you encrypt and send a message, you must share the key with your intended recipient.</string>
    <string name="help_main_creating_keys_title">Creating keys</string>
    <string name="help_main_creating_keys_content">To create a key, tap the add button on the main screen, then tap the \'New secret key\' button. Select the key length, enter or generate an optional password, and give the key an optional colour and description.</string>
    <string name="help_main_sharing_keys_title">Sharing keys</string>
    <string name="help_main_sharing_keys_content">Once you have created a key, it will be shown in your list of secret keys. To share it, press and hold on the key in the list until the title bar changes to indicate it is selected. Tap the share button, then tap the mechanism you\'d like to share the key with. Android Beam is an excellent way to share secret keys.</string>
    <string name="help_main_importing_keys_title">Importing keys</string>
    <string name="help_main_importing_keys_content"><![CDATA[If someone shares a key with you (via email, for example), you may open the key with the \'Import Vernam Cipher key\' app to import it into your secret key list. You may give it an optional description & colour.]]></string>
    <string name="help_main_messages_title">Messages</string>
    <string name="help_main_messages_content">Messages that you have saved are shown in the messages list. You may tap on a message to view it or long-press on it to share or delete it.</string>
    <string name="help_main_encrypting_title"><![CDATA[Encrypting & sending messages]]></string>
    <string name="help_main_encrypting_content">Once you have shared your key with someone, you may write them a message. Tap on the secret key to begin writing a message using that key.</string>
    <string name="help_main_decrypting_title">Decrypting messages</string>
    <string name="help_main_decrypting_content_1">When you receive an encrypted message (via an email attachment, for example), you may open the encrypted message with the \'Decrypt with Vernam Cipher\' app. This will allow you to read and optionally save the message.</string>
    <string name="help_main_decrypting_content_2">You may also receive encrypted messages as text. To decrypt messages received as text, first select the text in whichever app you received it. If you are running Android Marshmallow or later, you may then tap the \'Share\' button that appears. If not, copy the text by tapping the \'Copy\' button, then open the Vernam Cipher app, tap the \'Add\' button on the bottom right, and tap the \'Decrypt clipboard\' button.</string>
    <string name="show_password">Show password</string>
</resources>