<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aptasystems.vernamcipher.AddSecretKeyActivity"
    tools:showIn="@layout/activity_add_secret_key">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_length_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/key_length_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/key_length_content_1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/text_view_secret_key_length_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/key_length_content_2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"/>

        <SeekBar
            android:id="@+id/seek_bar_secret_key_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="false"
            android:max="99"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/key_data_source"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <RadioButton
                android:id="@+id/radio_android_prng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectDataSource"
                android:text="@string/key_data_source_android"/>

            <RadioButton
                android:id="@+id/radio_random_org"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectDataSource"
                android:text="@string/key_data_source_random_org"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_content_1"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_content_2"
            android:textAppearance="?android:attr/textAppearanceSmall"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/password_mechanism_diceware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="selectPasswordMechanism"
                android:text="@string/password_mechanism_diceware"/>

            <RadioButton
                android:id="@+id/password_mechanism_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectPasswordMechanism"
                android:text="@string/password_mechanism_enter_password"/>

            <RadioButton
                android:id="@+id/password_mechanism_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectPasswordMechanism"
                android:text="@string/password_mechanism_no_password"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout_diceware_app_not_installed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/diceware_password_not_installed_content"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="installDiceware"
                android:text="@string/diceware_password_button_not_installed"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_diceware_app_installed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/diceware_password_content"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="generateDicewarePassword"
                android:text="@string/diceware_password_button"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_enter_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/edit_text_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/repeat_password_hint"
                android:inputType="textPassword"/>

            <CheckBox
                android:id="@+id/check_box_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toggleShowPassword"
                android:text="@string/show_password"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description_and_colour_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description_and_title_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
            android:id="@+id/text_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/description_hint"
            android:inputType="textCapSentences|textAutoCorrect"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:stretchColumns="0,1,2">

            <TableRow>

                <RadioButton
                    android:id="@+id/colour_black"
                    android:onClick="selectColour"
                    android:text="@string/colour_black"/>

                <RadioButton
                    android:id="@+id/colour_red"
                    android:onClick="selectColour"
                    android:text="@string/colour_red"/>

                <RadioButton
                    android:id="@+id/colour_green"
                    android:onClick="selectColour"
                    android:text="@string/colour_green"/>
            </TableRow>

            <TableRow>

                <RadioButton
                    android:id="@+id/colour_blue"
                    android:onClick="selectColour"
                    android:text="@string/colour_blue"/>

                <RadioButton
                    android:id="@+id/colour_cyan"
                    android:onClick="selectColour"
                    android:text="@string/colour_cyan"/>

                <RadioButton
                    android:id="@+id/colour_orange"
                    android:onClick="selectColour"
                    android:text="@string/colour_orange"/>
            </TableRow>

            <TableRow>

                <RadioButton
                    android:id="@+id/colour_purple"
                    android:onClick="selectColour"
                    android:text="@string/colour_purple"/>

                <RadioButton
                    android:id="@+id/colour_grey"
                    android:onClick="selectColour"
                    android:text="@string/colour_grey"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>